Minor changes (footer and logo)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Outstock | A Premium Multi - Ecommerce</title>
+	<title>thetstory | Succulents, Terrariums & Home Decor</title>
 	<!-- Standard -->
 	<link rel="shortcut icon" href="assets/img/ficon.png">
 	<!-- Latest Bootstrap min CSS -->
@@ -44,7 +44,7 @@
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-					<a class="navbar-brand" href="#"><img src="assets/images/logo.png" alt="logo"></a>
+					<a class="navbar-brand" href="#"><img src="assets/images/thetstory-logo-black.png" alt="logo" height="70" style="margin-top: -25px"></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -731,12 +731,12 @@
 				<div class="col-xs-12 col-sm-6 col-md-6">
 					<!-- f-weghit -->
 					<div class="f-weghit">
-						<img src="assets/images/flogo.png" alt="logo">
-						<p>Outstock is a premium Templates theme with advanced admin module. It’s extremely customizable, easy to use and fully responsive and retina ready.</p>
+						<img src="assets/images/thetstory-logo-white.png" alt="logo" height="60">
+						<p>Let's make gifting simple.</p>
 						<ul>
-							<li><i class="icon-location-pin icons" aria-hidden="true"></i> <strong>Add:</strong> 1234 Heaven Stress, Beverly Hill, Melbourne, USA.</li>
-							<li><i class="icon-envelope-letter icons"></i> <strong>Email:</strong> contact@example.com</li>
-							<li><i class="icon-call-in icons"></i> <strong>Phone Number:</strong> (800) 123 456 789</li>
+							<li><i class="icon-location-pin icons" aria-hidden="true"></i> Amchi Mumbai</li>
+							<li><i class="icon-envelope-letter icons"></i> hello@thetstory.co</li>
+							<li><i class="icon-call-in icons"></i> 797-777-6587 / 996-702-2329</li>
 						</ul>
 					</div>
 					<!-- /f-weghit -->
@@ -777,17 +777,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 col-sm-6 col-md-6">
-						Copyright &copy; <a href="#">Outstock</a> all rights reserved. Powered by <a href="#">zcube</a>
+						 &copy; 2017 - 2018 <a href="http://thetstory.co/about"> The Terrarium Story Company</a>. All rights reserved.
 					</div>
 					<div class="text-right col-xs-12 col-sm-6 col-md-6">
 						<div class="f-sicon2">
 							<ul>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.facebook.com/thetstoryco/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.instagram.com/thetstory"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -797,41 +793,6 @@
 		<!-- /copayright -->
 	</footer>
 	<!--  /main  -->
-	<!-- Get Our Email Letter popup -->
-	<div class="modal fade modal-popup" id="modal1" data-open-onload="true" data-open-delay="1500" tabindex="-1" role="dialog">
-		<div class="modal-dialog modal-lg" role="document">
-			<div class="modal-content" style="background-image:url('images/modal-background.jpg'); background-size:cover">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fa fa-times"></i></button>
-				<div class="modal-body">
-					<div class="container-fluid">
-						<div class="row">
-							<div class="col-sm-2 pt-20 text-center">
-							</div>
-							<div class="col-sm-8 pt-20 text-center">
-								<h2 class="heading font34 inverse">
-									Get Our Email Letter</h2>
-								<p class="font22 text-center">Subscribe to the Outstock mailing list to receive updates on new arrivals, special offers and other discount information.</p>
-								<form name="main">
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Enter your Email id"> </div>
-									<div class="form-group">
-										<button class="btn btn-black" type="button">Subscribe!</button>
-									</div>
-								</form>
-							</div>
-							<div class="col-sm-2 pt-20 text-center">
-							</div>
-							<div class="col-sm-12">
-								<div class="form-group text-right">
-									<input type="checkbox" name="check" /> Do not show this popup again </div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- /Get Our Email Letter popup -->
 	<!--  quick popup  -->
 	<div class="modal fade bwidth" id="quickModal" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
