--- a/index.html
+++ b/index.html
@@ -50,104 +50,16 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" data-hover="dropdown" data-animations="fadeIn fadeInLeft fadeInUp fadeInRight">
 					<ul class="nav navbar-nav">
-						<li class="dropdown"> <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span>Home</span></a>
-							<ul class="dropdown-menu dropdownhover-bottom" role="menu">
-								<li><a href="index.html">Home pages 1</a></li>
-								<li><a href="index2.html">Home pages 2</a></li>
-								<li><a href="index3.html">Home pages 3</a></li>
-								<li><a href="index4.html">Home pages 4</a></li>
-							</ul>
-						</li>
-						<li class="dropdown"> <a href="list.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span> Shop</span></a>
-							<div class="dropdown-menu dropdownhover-bottom mega-menu" role="menu">
-								<div class="col-sm-8 col-md-8">
-									<ul>
-										<li><strong>Shop Pages</strong></li>
-										<li><a href="#">Standard Shop Page</a></li>
-										<li><a href="#">Small Products</a></li>
-										<li><a href="#">Medium Products</a></li>
-										<li><a href="#">Large Products</a></li>
-										<li><a href="#">Sidebar</a></li>
-										<li><a href="#">Pagination</a></li>
-										<li><a href="#">Shop Infinity</a></li>
-									</ul>
-									<ul>
-										<li><strong>Products Pages</strong></li>
-										<li><a href="#">Product Page V1</a></li>
-										<li><a href="#">Product Page V2</a></li>
-										<li><a href="#">Product Page V3</a></li>
-										<li><a href="#">Product Page V4</a></li>
-										<li><a href="#">Simple Product</a></li>
-										<li><a href="#">Variable Product</a></li>
-										<li><a href="#">External Product</a></li>
-									</ul>
-									<ul>
-										<li><strong>Other Shop Pages</strong></li>
-										<li><a href="#">Collection</a></li>
-										<li><a href="#">LookBook</a></li>
-										<li><a href="#">Shopping Cart</a></li>
-										<li><a href="#">Wishlist</a></li>
-										<li><a href="#">Order Tracking</a></li>
-										<li><a href="#">My Account</a></li>
-										<li><a href="#">Checkout</a></li>
-									</ul>
-								</div>
-								<div class="col-sm-4 col-md-4"> <img src="assets/images/Hover-menu-img.jpg" alt="Hover-menu-img"> </div>
-							</div>
-						</li>
-						<li> <a href="#" class="dropdown-toggle"><span>About</span></a> </li>
-						<li class="dropdown">
-							<a href="blog.html" data-toggle="dropdown" role="button" aria-expanded="false"><span>Blog</span></a>
-							<ul class="dropdown-menu dropdownhover-bottom" role="menu">
-								<li><a href="blog.html">Blog</a></li>
-								<li><a href="blog-columm3-masonry.html">Blog Columm 3 Masonry</a></li>
-								<li><a href="blog-filter-2-columns.html">Blog Filter 2 Columns</a></li>
-								<li><a href="blog-filter-3-columns.html">Blog Filter 3 Columns</a></li>
-								<li><a href="blog-details.html">Blog Details</a></li>
-							</ul>
-						</li>
-						<li> <a href="contact.html"><span>Contact</span></a> </li>
-						<li class="dropdown">
-							<a href="gridfull.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-								<span>Elements</span></a>
-							<ul class="dropdown-menu dropdownhover-bottom" role="menu">
-								<li><a href="list.html">Shop List</a></li>
-								<li><a href="grid-3-columns.html">Shop Grid 3 Columns</a></li>
-								<li><a href="grid-4-columns.html">Shop Grid 4 Columns</a></li>
-								<li><a href="grid-sidebar-left.html">Shop Grid Sidebar Left</a></li>
-								<li><a href="products-detail.html">Products Detail</a></li>
-								<li><a href="products-detail02.html">Products Detail 02</a></li>
-							</ul>
-						</li>
+
+							<li> <a href="index.html"><span>Home</span></a> </li>
+							<li> <a href="#"><span>Products</span></a> </li>
+							<li> <a href="#"><span>Services</span></a> </li>
+							<li> <a href="about-us.html"><span>About</span></a> </li>
+							<li> <a href="#"><span>Contact</span></a> </li>
+
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a href="#" data-toggle="modal" data-target=".popup1"><img src="assets/images/top-icon1.png" alt="top-icon1"> <span>Search</span></a>
-						</li>
-						<li class="dropdown">
-							<a href="#" class="dropbtn"> <img src="assets/images/top-icon3.png" alt="top-ico3"> <span>Cart (0)</span> </a>
-							<div class="dropdown-content">
-								<div class="cart-content">
-									<div class="col-sm-4 col-md-4"><img src="assets/images/Products/13.jpg" alt="13"></div>
-									<div class="col-sm-8 col-md-8">
-										<div class="pro-text"> <a href="#">Pellentesque Habitant</a>
-											<div class="close">x</div> <strong>$160.00</strong> </div>
-									</div>
-								</div>
-								<div class="cart-content">
-									<div class="col-sm-4 col-md-4"><img src="assets/images/Products/11.jpg" alt="13"></div>
-									<div class="col-sm-8 col-md-8">
-										<div class="pro-text"> <a href="#">Pellentesque Habitant</a>
-											<div class="close">x</div> <strong>$160.00</strong> </div>
-									</div>
-								</div>
-								<div class="total">
-									<div class="col-sm-6 col-md-6 text-left"> <span>Shipping :</span>
-										<br> <strong>Total :</strong> </div>
-									<div class="col-sm-6 col-md-6 text-right"> <strong>$0.00</strong>
-										<br> <strong>$160.00</strong> </div>
-								</div> <a href="shopping-cart.html" class="cart-btn">VIEW CART </a> <a href="checkout.html" class="cart-btn">CHECKOUT</a> </div>
-						</li>
+
 						<li>
 							<a href="#" data-toggle="modal" data-target=".menu-popup"><img src="assets/images/top-icon2.png" alt="top-icon2"></a>
 						</li>
@@ -178,75 +90,11 @@
 				<div class="modal-content search-popup">
 					<nav class="navbar navbar-inverse openmenu">
 						<ul class="nav navbar-nav">
-							<li class="dropdown"> <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span>Home</span></a>
-								<ul class="dropdown-menu dropdownhover-bottom" role="menu">
-									<li><a href="index.html">Home pages 1</a></li>
-									<li><a href="index2.html">Home pages 2</a></li>
-									<li><a href="index3.html">Home pages 3</a></li>
-									<li><a href="index4.html">Home pages 4</a></li>
-								</ul>
-							</li>
-							<li class="dropdown"> <a href="list.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span> Shop</span></a>
-								<div class="dropdown-menu dropdownhover-bottom mega-menu" role="menu">
-									<div class="col-sm-8 col-md-8">
-										<ul>
-											<li><strong>Shop Pages</strong></li>
-											<li><a href="#">Standard Shop Page</a></li>
-											<li><a href="#">Small Products</a></li>
-											<li><a href="#">Medium Products</a></li>
-											<li><a href="#">Large Products</a></li>
-											<li><a href="#">Sidebar</a></li>
-											<li><a href="#">Pagination</a></li>
-											<li><a href="#">Shop Infinity</a></li>
-										</ul>
-										<ul>
-											<li><strong>Products Pages</strong></li>
-											<li><a href="#">Product Page V1</a></li>
-											<li><a href="#">Product Page V2</a></li>
-											<li><a href="#">Product Page V3</a></li>
-											<li><a href="#">Product Page V4</a></li>
-											<li><a href="#">Simple Product</a></li>
-											<li><a href="#">Variable Product</a></li>
-											<li><a href="#">External Product</a></li>
-										</ul>
-										<ul>
-											<li><strong>Other Shop Pages</strong></li>
-											<li><a href="#">Collection</a></li>
-											<li><a href="#">LookBook</a></li>
-											<li><a href="#">Shopping Cart</a></li>
-											<li><a href="#">Wishlist</a></li>
-											<li><a href="#">Order Tracking</a></li>
-											<li><a href="#">My Account</a></li>
-											<li><a href="#">Checkout</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-4 col-md-4"> <img src="assets/images/Hover-menu-img.jpg" alt="Hover-menu-img"> </div>
-								</div>
-							</li>
-							<li> <a href="#" class="dropdown-toggle"><span>About</span></a> </li>
-							<li class="dropdown">
-								<a href="blog.html" data-toggle="dropdown" role="button" aria-expanded="false"><span>Blog</span></a>
-								<ul class="dropdown-menu dropdownhover-bottom" role="menu">
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="blog-columm3-masonry.html">Blog Columm 3 Masonry</a></li>
-									<li><a href="blog-filter-2-columns.html">Blog Filter 2 Columns</a></li>
-									<li><a href="blog-filter-3-columns.html">Blog Filter 3 Columns</a></li>
-									<li><a href="blog-details.html">Blog Details</a></li>
-								</ul>
-							</li>
-							<li> <a href="contact.html"><span>Contact</span></a> </li>
-							<li class="dropdown">
-								<a href="gridfull.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-									<span>Elements</span></a>
-								<ul class="dropdown-menu dropdownhover-bottom" role="menu">
-									<li><a href="list.html">Shop List</a></li>
-									<li><a href="grid-3-columns.html">Shop Grid 3 Columns</a></li>
-									<li><a href="grid-4-columns.html">Shop Grid 4 Columns</a></li>
-									<li><a href="grid-sidebar-left.html">Shop Grid Sidebar Left</a></li>
-									<li><a href="products-detail.html">Products Detail</a></li>
-									<li><a href="products-detail02.html">Products Detail 02</a></li>
-								</ul>
-							</li>
+							<li> <a href="#"><span>Home</span></a> </li>
+							<li> <a href="#"><span>Products</span></a> </li>
+							<li> <a href="#"><span>Services</span></a> </li>
+							<li> <a href="#"><span>About</span></a> </li>
+							<li> <a href="#"><span>Contact</span></a> </li>
 						</ul>
 					</nav>
 				</div>
@@ -747,27 +595,20 @@
 						<h4>Information</h4>
 						<ul>
 							<li><a href="#">About Us</a></li>
-							<li><a href="#">Careers</a></li>
-							<li><a href="#">Delivery Inforamtion </a></li>
-							<li><a href="#">Privacy Policy</a></li>
-							<li><a href="#">Terms & Condition</a></li>
+							<li><a href="#">Contact </a></li>
+							<li><a href="privacy-policy.html">Privacy Policy</a></li>
 						</ul>
 					</div>
 					<!-- /f-weghit2 -->
 				</div>
 				<div class="col-xs-12 col-sm-3 col-md-3">
-					<!-- f-weghit2 -->
 					<div class="f-weghit2">
-						<h4>Customer Service</h4>
+						<h4>Services</h4>
 						<ul>
-							<li><a href="#">Shipping Policy</a></li>
-							<li><a href="#">Help & Contact Us</a></li>
-							<li><a href="#">Returns & Refunds </a></li>
-							<li><a href="#">Online Stores</a></li>
-							<li><a href="#">Terms & Conditions</a></li>
+							<li><a href="#">Collaborate</a></li>
+							<li><a href="#">Garden Planning </a></li>
 						</ul>
 					</div>
-					<!-- /f-weghit2 -->
 				</div>
 
 			</div>
